[HTM-464] code quality improvements