@@ -72,11 +72,11 @@ public class ArcGISService extends GeoService{
     // See {Layer#virtual}
     // Group layers are thus virtual layers. Sometimes ArcGIS even has layers
     // without a type...
-    public static final Set<String> NON_VIRTUAL_LAYER_TYPES = Collections.unmodifiableSet(new HashSet(Arrays.asList(new String[] {
-        "Feature Layer",
-        "Raster Layer",
-        "Annotation Layer" // not sure about this one...
-    })));
+    public static final Set<String> NON_VIRTUAL_LAYER_TYPES = Set.of(new String[]{
+            "Feature Layer",
+            "Raster Layer",
+            "Annotation Layer" // not sure about this one...
+    });
 
 
     @Transient
